--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mysql2": "^3.5.1",
